--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,10 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title>Vuejs calendar by Sergio Rivera Morales</title>
     <meta name="author" content="Sergio Rivera / sergi.erm@gmail.com" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <noscript>
